--- a/style/media.css
+++ b/style/media.css
@@ -153,4 +153,16 @@ padding: 16px;
         .footer_list {
             margin-left: 23%;
         }
-    }
+    @media(max-width:360px){
+    .link {
+        font-size: 10px;}
+        span {
+            font-size: 25px;
+            line-height: 0px;
+            padding: 32px 44px;}
+            .content_header_link {
+                font-size: 16px;
+                line-height: 0px;
+                padding: 32px 26px;
+                margin-left: 27px;}
+            }
